--- a/src/pages/signin/index.scss
+++ b/src/pages/signin/index.scss
@@ -2,8 +2,8 @@
   background-color: #f2fbfe !important;
   display: flex;
   align-items: center;
-  background-image: url("../../assets/images/sigin-bg.png");
-  background-size: contain;
+  background-image: url("../../assets/images/login_page_background.png");
+  background-size: cover;
 
   .sigin-form-container {
     max-width: 400px;
