--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -8,7 +8,6 @@
     height: 15px;
     margin-right: 5px;
   }
-
 }
 
 .btn-gradient {
@@ -72,6 +71,10 @@
   background-size: 12px;
   background-position-x: 95%;
   padding-left: 10px;
+
+  option {
+    font-family: "Inter-Regular" !important;
+  }
 }
 
 .dropdown-style-2 {
