--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -93,6 +93,12 @@
       gap: 20px;
       align-items: center;
 
+      .language-select {
+        span {
+          color: #fff;
+        }
+      }
+
       span {
         cursor: pointer;
         user-select: none;
