--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -273,6 +273,10 @@
     text-align: left;
     overflow-x: auto;
 
+    // display: block;
+    // max-height: 300px;
+    // overflow-y: scroll;
+
     th {
       white-space: nowrap;
       overflow: hidden;
@@ -280,6 +284,7 @@
 
     td,
     th {
+      position: relative;
       padding: 10px 20px;
       border: 1px solid #cdd5e2;
       font-size: 12px;
