--- a/src/pages/signin/index.scss
+++ b/src/pages/signin/index.scss
@@ -2,13 +2,35 @@
   background-color: #f2fbfe !important;
   display: flex;
   align-items: center;
-  background-image: url("../../assets/images/login_page_background.png");
+  background-image: url('../../assets/images/background.png');
   background-size: cover;
-
+  padding-left: 15%;
+  @media screen and (max-width: 880px) {
+    padding-left: 0;
+    justify-content: center;
+    .sign-in-landing-image {
+      display: none;
+    }
+  }
+  .sign-in-landing {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    .sign-in-landing-image {
+      width: calc(32vw + 40px);
+      object-fit: contain;
+      position: absolute;
+      margin-top: 16vw;
+    }
+  }
   .sigin-form-container {
     max-width: 400px;
     width: 100%;
-    margin-left: 15%;
 
     .sigin-logo {
       width: auto;
@@ -33,7 +55,7 @@
       }
 
       h1 {
-        font-family: "Engschrift Caps";
+        font-family: 'Engschrift Caps';
         text-transform: uppercase;
       }
     }
