--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -92,7 +92,7 @@
 }
 
 .dropdown-style-2 {
-  padding: 5px 10px;
+  padding: 5px 20px 5px 10px;
   width: 100%;
   border: 1px solid #cdd5e2;
   border-radius: 5px;
