--- a/src/globalComponents/tables/index.scss
+++ b/src/globalComponents/tables/index.scss
@@ -1,8 +1,17 @@
 .rdg-light {
+  height: fit-content;
+  // width: fit-content;
+  // border:none;
   &::before {
     pointer-events: none;
     border-top: 1px solid #ddd;
     border-left: 1px solid #ddd;
     z-index: 2;
   }
+}
+
+.correlation-matrix-table {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
 }
