restructures routes and updated some tables

--- a/src/globalComponents/tables/index.scss
+++ b/src/globalComponents/tables/index.scss
@@ -54,3 +54,17 @@
     }
   }
 }
+
+.cell-text {
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  .tooltip-wrapper {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+  }
+}
