--- a/src/globalComponents/tables/index.scss
+++ b/src/globalComponents/tables/index.scss
@@ -1,12 +1,19 @@
 .rdg-light {
   height: fit-content;
   user-select: none;
-  // width: fit-content;
-  // border:none;
+  border-color: transparent !important;
+  border-right: none;
+  border-bottom: none;
+  // border-radius: 5px;
+  // overflow: hidden;
+  .rdg-cell {
+    border-color: #9eddf4 !important;
+  }
+
   &::before {
     pointer-events: none;
-    border-top: 1px solid #ddd;
-    border-left: 1px solid #ddd;
+    border-top: 1px solid #9eddf4;
+    border-left: 1px solid #9eddf4;
     z-index: 2;
   }
 }
@@ -33,14 +40,17 @@
   user-select: none;
 }
 .cell-input {
-  width: 100%;
-  height: 100%;
-  border: none;
+  position: absolute !important;
+  width: 100% !important;
+  height: 100% !important;
   position: relative;
   padding: 0 10px;
   user-select: none;
+  border-top: none !important;
+  border-left: none !important;
+  border-right: none !important;
   &:focus {
-    border: 1px solid rgb(0, 153, 255);
+    border-bottom: 1px solid rgb(0, 153, 255) !important;
   }
 }
 
