SCR Projection Table added

--- a/src/globalComponents/tables/index.scss
+++ b/src/globalComponents/tables/index.scss
@@ -4,6 +4,7 @@
   border-color: transparent !important;
   border-right: none;
   border-bottom: none;
+  // max-height: 500px;
   // border-radius: 5px;
   // overflow: hidden;
   .rdg-cell {
