--- a/src/globalComponents/inputField/index.scss
+++ b/src/globalComponents/inputField/index.scss
@@ -3,6 +3,12 @@
   width: 100%;
   margin-top: 10px;
 
+  &.error {
+    input {
+      border: 1px solid red;
+    }
+  }
+
   .prepend-icon {
     position: absolute;
     left: 15px;
