--- a/src/pages/newDashboard/components/tree/styles.scss
+++ b/src/pages/newDashboard/components/tree/styles.scss
@@ -11,9 +11,15 @@
     align-items: center;
     height: 100%;
     width: 100%;
+    flex-direction: column;
+    gap: 3px;
 
-    h5 {
+    h5,
+    p {
       color: white;
+      margin: 0;
     }
+
+  
   }
 }
