--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -96,7 +96,8 @@
   width: 100%;
   border: 1px solid #cdd5e2;
   border-radius: 5px;
-  background: url("../assets/images/small-arrow-down-icon.png") no-repeat right #eff4f9;
+  background: url("../assets/images/small-arrow-down-icon.png") no-repeat right
+    #eff4f9;
   -webkit-appearance: none;
   background-size: 10px;
   background-position-x: 95%;
@@ -346,7 +347,6 @@
   white-space: nowrap;
 }
 
-
 .form-error-message {
   color: red;
   font-size: 12px;
@@ -360,7 +360,6 @@
   height: 100%;
   width: 100%;
 
-
   &.overlay {
     z-index: 999999;
     position: fixed;
@@ -370,9 +369,14 @@
     right: 0;
     background-color: #00000030;
   }
-
 }
 
 .primary-text-color {
   color: $primary-color;
+}
+
+.spin-white {
+  i {
+    background-color: white;
+  }
 }
