--- a/src/globalComponents/jobs/styles.scss
+++ b/src/globalComponents/jobs/styles.scss
@@ -8,6 +8,7 @@
     border: 1px solid #11b4ed;
     border-radius: 5px;
     position: relative;
+    gap: 5px;
 
     &::after {
       content: "";
@@ -36,12 +37,13 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
+    max-height: 400px;
+    overflow-y: auto;
 
     .job-card {
       padding: 10px 20px 8px 15px;
       background-color: white;
       border-radius: 0px 5px 5px 0px;
-      height: 60px;
       position: relative;
 
       .title {
@@ -79,7 +81,7 @@
           font-size: 10px;
           font-weight: 700;
         }
-        .job-mmenu {
+        .job-menu {
           cursor: pointer;
         }
       }
