--- a/src/pages/equity/components/jobs/styles.scss
+++ b/src/pages/equity/components/jobs/styles.scss
@@ -79,7 +79,7 @@
           font-size: 10px;
           font-weight: 700;
         }
-        .job-mmenu {
+        .job-menu {
           cursor: pointer;
         }
       }
