--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -5,7 +5,6 @@
 
 .main-layout {
   height: calc(100vh);
-
 }
 
 .auth-layout {
@@ -16,7 +15,7 @@
     background-color: #f2fbfe !important;
     display: flex;
     align-items: center;
-    background-image: url('../assets/images/background.png');
+    background-image: url("../assets/images/background.png");
     background-size: cover;
     padding-left: 15%;
 
@@ -74,7 +73,7 @@
         }
 
         h1 {
-          font-family: 'Engschrift Caps';
+          font-family: "Engschrift Caps";
           text-transform: uppercase;
         }
       }
@@ -84,8 +83,6 @@
       }
     }
   }
-
-
 }
 
 .page-layout {
@@ -122,7 +119,6 @@
     }
 
     svg {
-
       path,
       rect {
         fill: #109ce7 !important;
@@ -148,7 +144,6 @@
   overflow-y: auto;
   height: 100vh;
 
-
   &:last-child {
     margin-bottom: 20px;
   }
@@ -156,7 +151,6 @@
 
 .page-header {
   width: 100%;
-  height: 250px;
   border-radius: 10px;
   background-color: #19202e;
   color: white;
@@ -200,15 +194,14 @@
   }
 
   .bottom-section {
-    min-height: 65%;
-    background-size: cover;
-    background-position-x: right;
-    background-image: url("../assets/images/illustration_and_background.png");
-    padding: 20px 20px 15px 20px;
+    min-height: 30%;
+    background: linear-gradient(90.26deg, #0e5fd9 2.2%, #11b4ed 99.02%);
+
+    padding: 10px 20px;
     border-radius: 0 0 10px 10px;
     display: flex;
     flex-direction: column;
-    background-repeat: no-repeat;
+    // background-repeat: no-repeat;
 
     h2 {
       margin-bottom: 0;
