--- a/src/pages/dashboard/components/optionCard/index.scss
+++ b/src/pages/dashboard/components/optionCard/index.scss
@@ -1,20 +1,20 @@
 .option-card {
   padding: 15px 20px;
   display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-  height: 90px;
-  width: 125px;
+  justify-content: center;
+  align-items: center;
   border-radius: 10px;
   cursor: pointer;
   user-select: none;
+  gap: 5px;
+  align-self: flex-start;
 
   img {
-    height: 25px;
-    width: 25px;
+    height: 18px;
+    width: 18px;
   }
 
-  h5 {
+  p {
     font-size: 12px;
     color: white;
     font-weight: bold;
