--- a/src/pages/appChoice/index.scss
+++ b/src/pages/appChoice/index.scss
@@ -8,6 +8,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+  padding: 20px;
+  flex-wrap: wrap;
 
   &::after {
     content: "";
