--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -9,7 +9,8 @@
     margin-right: 5px;
   }
   &.disabled {
-    opacity: 0.5;
+    background: #D3D3D3 !important;
+    cursor: not-allowed;
   }
 }
 
@@ -37,6 +38,7 @@
 
   &.disabled {
     opacity: 0.5;
+    background: #D3D3D3 !important;
   }
 }
 
